# EOS-transaction-tracker

./: .gitignore  CMakeLists.txt  conanfile.txt
bash/: build.sh
src/: eosflare.cpp  eosflare.hpp  eostracker.cpp  eostracker.hpp  main.cpp  utils.cpp  utils.hpp
